# QuantumArchitect-MCP

./: .gitignore  .hf-config  LICENSE  QUANTUM_ARCHITECT_REVIEW.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
frontend/: __init__.py
frontend/core/: __init__.py  circuits.py  constants.py  helpers.py
frontend/tabs/: __init__.py  tab_bell_state_study.py  tab_circuit_builder.py  tab_dirac_notation_study.py  tab_getting_started.py  tab_ghz_state_study.py  tab_grover_study.py  tab_mcp_endpoints.py  tab_measurement_study.py  tab_qft_study.py  tab_reference.py  tab_score.py  tab_simulate.py  tab_templates.py  tab_transpilation_study.py  tab_validate.py  tab_vqe_study.py
frontend/ui/: __init__.py  mcp_tools.py  styles.py  ui_handlers.py  visualizations.py
src/: __init__.py
src/core/: __init__.py  circuit_parser.py  dag_representation.py  exceptions.py
src/data/hardware_profiles/: ibm_eagle.json  ionq_aria.json  rigetti_aspen.json
src/data/reference_circuits/: bell_state.json  grover_2qubit.json
src/mcp_server/: __init__.py  context_provider.py  endpoint_handlers.py  schemas.py
src/plugins/: __init__.py
src/plugins/creation/: __init__.py  gate_library.py  visualizers.py
src/plugins/evaluation/: __init__.py  noise_estimator.py  resource_estimator.py  statevector_sim.py
src/plugins/scoring/: __init__.py  complexity_score.py  expressibility_score.py  hardware_fitness.py
src/plugins/validation/: __init__.py  connectivity_validator.py  syntax_checker.py  unitary_check.py
(+3 files in other folders)
