[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-architect-mcp"
version = "1.0.0"
description = "MCP Server for Quantum Circuit Creation, Validation, and Evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "QuantumArchitect Team" }
]
keywords = ["quantum", "mcp", "gradio", "qiskit", "quantum-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "gradio>=6.0.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
quantum-architect = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
